# REMORA-research

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  ENTERPRISE_LICENSE.md  EVIDENCE_OF_CAPABILITY.md  LICENSE  Makefile  NEGATIVE_RESULTS.md  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml  requirements-lock.txt
.github/: CODEOWNERS  pull_request_template.md
artifacts/: README.md  agentharm_benchmark_results.json  agentharm_mode2_cache.json  agentharm_test_public_results.json  agentharm_trimode_results.json  aromer_balanced_validation_v1.json  aromer_external_holdout_ablation_v1.json  aromer_holdout_episodes.jsonl  aromer_injection_ceiling_v1.json  aromer_learning_ablation_v1.json  aromer_learning_ablation_v2.json  aromer_learning_effect_v1.json  aromer_train_episodes.jsonl  benchmark_n500_locked.json  domain_benchmark_results.json  live_benchmark_results.json  remora_aromer_claim_register.json  replay_benchmark.json  reproduce.sh  toolcall_benchmark_v1.json  toolcall_live_cache_v1.json
docs/: 00-index.md  01-architecture.md  02-evidence-and-claims.md  03-experiments.md  04-negative-results-detail.md  05-claim-hygiene.md  06-reproducibility.md  07-api-reference.md  08-security.md  09-related-work.md  10-contributing.md  11-benchmark-validation-plan.md  12-agentharm-validation.md  AI_USE.md  DOCS_CONSOLIDATION_AUDIT.md  EXTERNAL_VALIDATION_PLAN.md  README.md  REMORA_AROMER_FINAL_REPORT.md  REMORA_AROMER_MASTER_DOCUMENT.md  REMORA_SPEAKING_GUIDE.md  agent_tool_hook.md  agentharm_live_benchmark.md  agentharm_trimode_benchmark.md  architecture_risk_register.md  aromer_learning_evidence_v1.md  authorship_evidence_report.md  benchmark_validation_plan.md  breakthrough_proof.md  causal_policy_explanations.md  claim_evidence_matrix.md  claim_hygiene.md  claim_register.md  cloudflare-productivity-layer.md  cloudflare_workers_ai.md  commercial-packaging.md  cyber_evidence_layer.md  decision_envelope_audit.md  demo-strategy.md  demo_reel_recording_guide.md  domain_benchmark.md  (+29 more)
enterprise/: ENTERPRISE_LICENSE.md  README.md  architecture.md  audit-ledger-schema.sql  deployment-runbook.md  executive-brief.md  human-approval-workflow.md  industrial-use-case.md  integration-patterns.md  nested_governance_layers.yaml  observability.md  pitch-1page.md  policy-model.md  policy_as_code_example.yaml  production-readiness.md  remora-control-plane.md  risk-profiles.yaml  sector-use-cases.md  threat-model.md  tool-governance.md
eval_pack/: README.md  agent_action_log_schema.md  report_template.md  run_validation.py
examples/: aromer_quickstart.py  autogen_integration.py  crewai_integration.py  demo_animation.html  enterprise_demo.py  langgraph_integration.py  openai_tool_calling.py  quickstart.py  remora_demo_reel.html  shadow_mode_demo.py
experiments/: __init__.py  _m1_flag_coverage.py  ablation.py  ablation_adaptation.py  ablation_cloudflare.py  ablation_matrix.py  ablation_v2.py  aromer_loop_health.py  benchmark_overlay.py  bootstrap_trust_curve.py  build_critical_phase_dataset_v2.py  calibrate_thermodynamics.py  calibration.py  cascade_benchmark.py  chi_iteration_utility.py  chi_perturbation_study.py  claim_consistency_audit.py  conformal_phase_guardrail.py  conformal_repeated_splits.py  empirical_susceptibility.py  end_to_end_n500_v2.py  end_to_end_n500_v3.py  evaluate_governance_intelligence.py  evaluate_phase_aware_guardrail.py  evaluate_toolcall_benchmark.py  evaluate_toolcall_benchmark_v2.py  evaluate_toolcall_benchmark_v2_live.py  evaluate_toolcall_benchmark_v2_live_exec.py  evaluate_toolcall_benchmark_v3.py  evidence_v2_n500.py  full_coverage_bound.py  gainability_routing.py  generate_toolcall_benchmark.py  generate_toolcall_benchmark_v2.py  lyapunov_aggregate.py  m1_clean_signal_eval.py  mondrian_repeated_splits.py  nested_trust_calibration.py  phase_aware_routing.py  phase_stability.py  (+17 more)
frontend/: README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts  wrangler.toml
paper/: claim_ledger.md  code_review_report.md  figures.md  future_state.md  hf_dataset_card.md  remora_mathematical_supplement.md  remora_paper.md  remora_paper.tex  remora_paper_template.md  whitepaper.md
remora/: README.md  __init__.py  canonical.py  cli.py  codegraph.py  core.py  correlation.py  correlation_error.py  counterfactual.py  credal.py  engine.py  gaa.py  genome.py  layers.py  lyapunov.py  (+9 more)
(+1034 files in other folders)
